# create-aptos-dapp

./: .gitignore  .npmrc  CHANGELOG.md  CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README.md  biome.json  cleanup_for_publish.sh  constants.ts  generateDapp.ts  index.html  index.ts  package-lock.json  package.json  pnpm-lock.yaml  standardWorkflow.ts  tsconfig.json
templates/custom-indexer-template/indexer/: .gitignore  Cargo.toml  Dockerfile  example.config.yaml
templates/custom-indexer-template/indexer/.cargo/: config.toml
templates/custom-indexer-template/indexer/src/: health_check_server.rs  lib.rs  main.rs
templates/custom-indexer-template/indexer/src/config/: indexer_processor_config.rs  processor_config.rs
templates/custom-indexer-template/indexer/src/db_migrations/: schema.rs
templates/custom-indexer-template/indexer/src/db_migrations/migrations/2024-07-18-194547_create-processor-status/: up.sql
templates/custom-indexer-template/indexer/src/db_migrations/migrations/2024-07-18-202400_alter-processor-status/: down.sql  up.sql
templates/custom-indexer-template/indexer/src/db_migrations/migrations/2024-08-25-233538_create-message-table/: down.sql  up.sql
templates/custom-indexer-template/indexer/src/db_migrations/migrations/2024-09-19-234343_create-user-stats-table/: down.sql  up.sql
templates/custom-indexer-template/indexer/src/db_migrations/migrations/2024-09-26-152853_add-total-points-to-user-stats-table/: down.sql  up.sql
templates/custom-indexer-template/indexer/src/db_models/: ledger_info.rs  message.rs  mod.rs  module_upgrade.rs  package_upgrade.rs  processor_status.rs
templates/custom-indexer-template/indexer/src/processors/events/: events_extractor.rs  events_processor.rs  events_storer.rs  mod.rs
templates/custom-indexer-template/indexer/src/steps/: extractor.rs  mod.rs  processor.rs  storer.rs
templates/custom-indexer-template/indexer/src/steps/storers/: create_message_event_storer.rs  mod.rs  update_message_event_storer.rs  upgrade_module_change_storer.rs  upgrade_package_change_storer.rs
templates/custom-indexer-template/indexer/src/utils/: chain_id.rs  database_connection.rs  database_execution.rs  database_utils.rs  latest_processed_version_tracker.rs  mod.rs
(+1232 files in other folders)
