[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]

# aptos dependencies

aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "e1e1bdd9349f0a68c9fc53b7e2cebda9e2ce92b7" }
aptos-indexer-processor-sdk-server-framework = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "e1e1bdd9349f0a68c9fc53b7e2cebda9e2ce92b7" }

# other dependencies

ahash = { version = "0.8.7", features = ["serde"] }
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
# Do NOT enable the postgres feature here, it is conditionally enabled in a feature
# block in the Cargo.toml file for the processor crate.
# https://github.com/aptos-labs/aptos-indexer-processors/pull/325
diesel = { version = "2.1", features = [
    "chrono",
    "postgres_backend",
    "numeric",
    "serde_json",
] }
# Use the crate version once this feature gets released on crates.io:
# https://github.com/weiznich/diesel_async/commit/e165e8c96a6c540ebde2d6d7c52df5c5620a4bf1
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "d02798c67065d763154d7272dd0c09b39757d0f2", features = [
    "async-connection-wrapper",
    "postgres",
    "bb8",
    "tokio",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
field_count = "0.1.1"
futures-util = "0.3.21"
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
num_cpus = "1.16.0"
poem = { version = "3.1.0", features = ["anyhow"] }
rayon = "1.10.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.34"
tokio = { version = "1.37.0", features = ["full"] }
url = { version = "2.5.1", features = ["serde"] }

# Postgres SSL support
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
tokio-postgres = "0.7.10"
